--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,4 @@ tensorflow_graphics == 2021.12.3
 dlimp @ git+https://github.com/kvablack/dlimp@166a1b271b19434c3a04b7cfacce0aa0f27bf413
 plotly >= 5.16.1
 matplotlib
+scipy == 1.12.0
